# aiwalt

./: .gitignore  README.md  ai_features.py  app.py  config.py  exception_engine.py  metrics.py  models.py  pyproject.toml  requirements.txt  seed_data.py
aiwalt/: __init__.py  main.py
aiwalt/ai/: brain.py
aiwalt/audio/: wake_word.py
aiwalt/core/: assistant.py  config.py
aiwalt/speech/: stt.py  tts.py
aiwalt/utils/: logger.py
config/: .env.example
scripts/: aiwalt.service  setup-pi.sh
static/: style.css
templates/: base.html  dashboard.html  detail.html  metrics.html
tests/: test_brain.py  test_config.py
